ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crimson-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 5000

      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 5000

      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 5000

      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 5000
